# RobotEscapeRoom

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS_FOR_ADVICE.md  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
docs/: authoring_external_adapters.md  cli.md  conformance.md  conversion.md  coordination.md  cost_composition.md  decisions.md  eval_grounding.md  experiments.md  grounding_report_sample.md  interfaces.md  paper_outline.md  queries.md  related_work.md  schema_v1.md  tutorial.md  visual_grounding_report_sample.md  waypoint_schema.md
docs/foxglove/: README.md  robot_escape_room_demo.mcap  robot_escape_room_timeline.json  semantic_toponav_demo.mcap
examples/: _generate_sample_map.py  _generate_sample_trajectories.py  build_baeru_hero_gif.py  build_demo_gif.py  build_semantic_tps_gif.py  build_social_preview.py  coordination_strategies_demo.py  embedding_demo.py  escape_room_3dgs_map.py  escape_room_camera.py  escape_room_interior.py  escape_room_mesh_render.py  escape_room_meshes.py  eval_abstention_benchmark.py  eval_bnb_budget_sweep.py  eval_constraints_ablation.py  eval_incremental_admission.py  eval_no_invent_audit.py  export_escape_room_foxglove_mcap.py  export_escape_room_nav2_route.py  export_foxglove_mcap.py  export_nav2_route.py  external_adapter_conformance.py  fusion_demo.py  generate_escape_room_3dgs_map.py  generate_escape_room_gazebo_world.py  generate_escape_room_meshes.py  generate_escape_room_nav2_map.py  indoor_office.json  indoor_office.yaml  load_csv_demo.py  load_map_demo.py  memory_demo.py  multi_floor_office.yaml  nav2_roundtrip_demo.py  occupancy_to_topology.py  record_cli_demo_gif.py  record_coordination_hero.py  record_escape_room.py  record_escape_room_gz_mp4.py  (+19 more)
examples/data/depot_views/: route_meta.json
examples/data/nav2/: escape_room_graph.geojson  escape_room_route.geojson  office_graph.geojson  office_route.geojson
examples/meshes/escape_room/: README.md  manifest.json
examples/meshes/escape_room/gazebo/: README.md  escape_room.world
examples/meshes/escape_room/gazebo/nav2/: escape_room.pgm  (+1 more)
ros2/: README.md
ros2/semantic_toponav_msgs/: CMakeLists.txt  package.xml
ros2/semantic_toponav_msgs/msg/: SemanticWaypoint.msg  SemanticWaypointArray.msg  TopologyEdge.msg  TopologyGraph.msg  TopologyNode.msg
ros2/semantic_toponav_ros/: package.xml  setup.py
ros2/semantic_toponav_ros/config/escape_room/: nav2_params.yaml
ros2/semantic_toponav_ros/launch/: escape_room_gz_nav2.launch.py
ros2/semantic_toponav_ros/semantic_toponav_ros/: escape_room_runner_node.py  graph_loader_node.py  msg_conversions.py  nav2_demo_node.py  waypoint_publisher_node.py
schemas/: conflict_explanation_v1.schema.json  fleet_plan_result_v1.schema.json  plan_with_scheduler_result_v1.schema.json  resolve_trace_v1.schema.json  semantic_waypoint_array.schema.json
scripts/: record_escape_room_gz_sim.sh  run_escape_room_gz_nav2.sh
scripts/foxglove_hero/: README.md  build_escape_room_gif.sh  build_hero_gif.sh  overlay_escape_room_frames.py  package.json  render.cjs  render_escape_room.cjs  render_escape_room_hero.py
semantic_toponav/: __init__.py
semantic_toponav/cli/: coordination_cli.py  editor.py  eval_cli.py  llm_cli.py  main.py  memory_cli.py  occupancy_cli.py  query_cli.py  vlm_cli.py
semantic_toponav/conversion/: __init__.py  csv_io.py  fusion.py  map_io.py  nav2_route.py  occupancy.py  rosbag2.py  trajectory.py  vlm.py
semantic_toponav/coordination/: __init__.py  branch_and_bound.py  exhaustive.py  fleet.py  http_transport.py  joint.py  persistence.py  policies.py  repair.py  rpc.py  scheduler.py
semantic_toponav/encoders/: __init__.py  backends.py  rgb_source.py
semantic_toponav/escape_room/: __init__.py  quests.py  runner.py
semantic_toponav/eval/: __init__.py  abstention.py  generators.py  grounding.py  metrics.py  no_invent.py  report.py  runner.py  visual_benchmark.py
semantic_toponav/graph/: __init__.py  builder.py  compaction.py  serialization.py  topology_graph.py  types.py
semantic_toponav/llm/: __init__.py  backends.py
semantic_toponav/memory/: __init__.py  costs.py  visit.py
semantic_toponav/planner/: __init__.py  astar.py  dijkstra.py  errors.py  reservations.py  semantic_costs.py
semantic_toponav/query/: __init__.py  clarification.py  embedding.py  find.py  llm_resolve.py  resolve.py  visual_localization.py  visual_navigation.py
semantic_toponav/testing/: __init__.py
semantic_toponav/testing/conformance/: __init__.py  aligned_rgb_source.py  conflict_policy.py  encoder_backend.py  llm_backend.py  scheduler.py  transport.py
semantic_toponav/visualization/: __init__.py  live.py  plot.py  web.py
semantic_toponav/waypoint/: __init__.py  describe.py  llm_describe.py  semantic_waypoint.py
tests/: conftest.py  test_abstention.py  test_aligned_rgb_source.py  test_astar.py  test_builder.py  test_cli.py  test_cli_coordination.py  test_cli_eval.py  test_cli_llm.py  test_cli_memory.py  test_cli_occupancy.py  test_cli_visual.py  test_conformance_builtins.py  test_coordination_admission.py  test_coordination_bnb.py  test_coordination_bnb_fairness.py  test_coordination_exhaustive.py  test_coordination_fleet.py  test_coordination_http_transport.py  test_coordination_joint.py  test_coordination_persistence.py  test_coordination_repair.py  test_coordination_rpc.py  test_coordination_scheduler.py  test_csv_trajectory.py  test_describe_path.py  test_dialog_session.py  test_dijkstra.py  test_dynamic_costs.py  test_editor.py  test_embedding.py  test_encoders.py  test_escape_room_quests.py  test_escape_room_runner.py  test_eval_bnb_budget_sweep.py  test_eval_constraints_ablation.py  test_eval_generators.py  test_eval_grounding.py  test_eval_incremental_admission.py  test_eval_metrics.py  (+39 more)
tests/fixtures/grounding/: abstention_llm_transcript.yaml  abstention_taxonomy.yaml  multi_floor_office.yaml  visual_depot.yaml  visual_depot_drive.yaml
(+5 files in other folders)
