<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_toponav_ros</name>
  <version>0.1.0</version>
  <description>
    Thin ROS2 adapter for the semantic-toponav Python core. Loads topology
    graphs and publishes semantic waypoints. The core planning logic lives in
    the ROS-independent `semantic_toponav` Python package.
  </description>
  <maintainer email="opensource@example.com">semantic-toponav contributors</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>semantic_toponav_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
